--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+bcchapi==1.1.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
@@ -11,9 +12,14 @@ itsdangerous==2.1.2
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 marshmallow==3.17.0
+numpy==1.21.6
 packaging==24.0
+pandas==1.3.5
 PyMySQL==1.1.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
 requests==2.31.0
+six==1.16.0
 transbank-sdk==5.0.0
 typing_extensions==4.7.1
 urllib3==2.0.7
